--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Art -- Anecdotes'
 - !lcsh 'Artists -- Anecdotes'
 - !lcc 'N'
+- GITenberg
 title: Anecdotes of Painters, Engravers, Sculptors  and Architects, and Curiosities
   of Art, (Vol. 2 of 3)
 url: http://www.gutenberg.org/ebooks/21198
